Apenas versão de desktop tem cores

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     
     <!-- Bem Vindo/Sobre -->
     <div class="about">
-        <div class="aboutMe"> TEXTO </div>
+        <div class="aboutMe"> TEXTO 
+            <h1>Us</h1>
+        </div>
         <div class="aboutMe"> IMAGEM </div>
     </div>
 
@@ -53,7 +55,7 @@
         
     </div>
     <!-- Redes Sociais -->
-
+    <h1>Contatos</h1>
     <div class="socialMidia">
         <a class="socialLink" href="">GHL</a>
         <a class="socialLink" href="">FBL</a>
