--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Projeto</title>
+    <!-- <title>Projeto</title> -->
 </head>
 <body>
     
@@ -41,7 +41,9 @@
 
     <!-- Coletânia de Fotos -->
     <div class="album">
-        <div class="photos">FOTOS</div>
+        <div class="photos">
+            <img src="content\fuji.jpg" width="100%" height="100%">
+        </div>
         <div class="photos">FOTOS</div>
         <div class="photos">FOTOS</div>
         <div class="photos">FOTOS</div>
