--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     
     <!-- Logo com Image de background-->
     <div id="logoBack">
-        <img src="" >
-        <div>LOGO + BACKGROUND</div>
+        <p>Parallax</p>
+        <div class="parallax">LOGO + BACKGROUND</div>
     </div>
     
     <!-- Frases/Icones -->
