Efeito quando abre

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animated.css">
     <link rel="stylesheet" href="css/style.css">
     
     <!-- <title>Projeto</title> -->
 </head>
-<body>
+<body class="animated fadeIn">
     
     <!-- Barra de Navegação -->
     <nav class="navBar">
