--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@
             <i class="fa fa-eye" ></i>
             <i class="fa fa-eye" ></i>
             <i class="fa fa-eye" ></i>
-            <i class="fa fa-eye" ></i>
-            <i class="fa fa-eye" ></i>
         </div>
         
         <div id="projectText">    
@@ -86,8 +84,6 @@
         </div>
 
         <div id="iconsProject2" class="iconsProject">
-            <i class="fa fa-eye" ></i>
-            <i class="fa fa-eye" ></i>
             <i class="fa fa-eye" ></i>
             <i class="fa fa-eye" ></i>
             <i class="fa fa-eye" ></i>
@@ -201,7 +197,7 @@
                 </article>
         </div>
         <div class="aboutUs">
-            <img class="imageUs" src="images/lucas.jpg" width="50%" height="50%">
+            <img class="imageUs" src="images/giovani.jpg" width="50%" height="50%">
         </div>
         <div class="aboutUs">
             <h1 class="aboutNames">Giovani Manoel</h1>
