--- a/index.html
+++ b/index.html
@@ -189,11 +189,9 @@
         </div>    
         <div class="aboutUs"> 
                 <h1 class="aboutNames">Lucas Pagliari </h1>
-                <article id="aboutText">   I'm Lucas Pagliari, one of my passion is photography 
-                    and now i'm studying System Analysis and Development at Fatec.
-                    This website is a project made for a workshop called Webtec.
-                    The main objective is develop a responsive page, by that i mean build
-                    a website's layout that could fit in cellphones, tablets and desktops. 
+                <article id="aboutText">   Uma das minhas paixões é a fotografia e atualmente estudo
+                    Analise e Desenvolvimento de Sistemas na Fatec Jundiaí. O projeto FOCUS foi uma 
+                    maneira que encontrei de envolver duas áreas que me interessam Fotografia e Desenvolvimento Web
                 </article>
         </div>
         <div class="aboutUs">
@@ -201,11 +199,8 @@
         </div>
         <div class="aboutUs">
             <h1 class="aboutNames">Giovani Manoel</h1>
-            <article id="aboutText">   I'm Lucas Pagliari, one of my passion is photography 
-                    and now i'm studying System Analysis and Development at Fatec.
-                    This website is a project made for a workshop called Webtec.
-                    The main objective is develop a responsive page, by that i mean build
-                    a website's layout that could fit in cellphones, tablets and desktops. 
+            <article id="aboutText">   Com o intuito de ajudar pessoas o projeto teve como base propagar
+                o conhecimento e assim possibilitar que novos profissionais nas áreas ascendão.
             </article>
         </div>
     </div>
